Changed expand/collapse treshold  and overrlay bug

--- a/Pzl.Ext.MegaMenu/src/extensions/globalNavigation/GlobalNavigation/GlobalNavigation.module.scss
+++ b/Pzl.Ext.MegaMenu/src/extensions/globalNavigation/GlobalNavigation/GlobalNavigation.module.scss
@@ -109,7 +109,7 @@
     background-color: $ms-themeDarkAlt;
     padding: 10px;
     display: flex;
-    justify-content: right;
+    justify-content: normal;
     position: relative;
     width: 100%;
   }
